fixes #1584 move padding from single connection-message to chat-window (and reduce the padding to align with the rest

--- a/webofneeds/won-owner-webapp/src/main/webapp/style/_post-messages.scss
+++ b/webofneeds/won-owner-webapp/src/main/webapp/style/_post-messages.scss
@@ -122,7 +122,7 @@
 
     .pm__content {
       grid-area: main;
-      padding: 1rem 0;
+      padding: 0.5rem;
       background: white;
       border: $thinGrayBorder;
       overflow: auto;
